# mytudo

./: .dockerignore  .gitignore  README.md  SUPABASE_DEPLOY.md  package-lock.json  package.json  render.yaml  tsconfig.json
bg-remove-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start_local.sh
bg-remove-service/src/bg_remove_service/: embedding_service.py  main.py
client/: .env.example  Dockerfile  Dockerfile.dev  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.tsx  index.css
client/src/api/: auth.api.ts  index.ts  (+8 more)
devlog/Overview/: architecture.md  backlogs.md  database.dbml
devlog/plans/: AI.md  MOBILE_COMPATIBILITY.md  deployment.md  phase12.md  phase2.5.md
dockerize/: .gitignore  QUICK_REFERENCE.md  README.md  RENDER_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml
dockerize/nginx/: nginx.prod.conf  nginx.stage.conf
dockerize/scripts/: build.sh  cleanup.sh  dev.sh  prod.sh  setup.sh  stage.sh  stop-all.sh  verify.sh
dockerize/supabase/: docker-compose.yml
server/: Dockerfile  Dockerfile.dev  package.json  tsconfig.json
server/src/: index.ts
shared/: package.json  tsconfig.json  tsconfig.tsbuildinfo
supabase/: Dockerfile  config.toml  seed.ts
supabase/migrations/: 20240101000000_initial_schema.sql  20240101000001_seed_data.sql  20240101000002_wardrobes_and_orders.sql  20240101000003_fix_wardrobe_structure.sql  20240101000004_add_embeddings.sql
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+107 files in other folders)
